# teamdynamix-api

./: .gitignore  CHANGELOG.md  MANIFEST.in  VERSION.md  pyproject.toml  pytest.ini  repomix-output(pre-alpha10-final).md  repomix-output(pre-alpha11_wip2).md
config/: sample.config.ini
docs/: ABSTRACT.md  ARCHITECTURE.md  Architectural_Decisions.md  CODE_AGENT.md  CONTRIBUTING.md  DESIGN.md  INDEX.md  PATTERNS.md  RELEASING.md
docs/teamdynamix/: _template.md  accounts.md  applications.md  attributes.md  auth.md  config.md  events.md  exceptions.md  functional_roles.md  groups.md  logger.md  people.md  projects.md  service_catalog.md  session.md  tickets.md  transport.md
docs/teamdynamix/tools/: README.md  csv_utils.md  sqlite_utils.md
scripts/: add_resources_to_project.py
src/: py.typed
src/teamdynamix/: __init__.py  accounts.py  applications.py  attributes.py  auth.py  config.py  event.py  exceptions.py  functional_roles.py  groups.py  logger.py  people.py  projects.py  service_catalog.py  session.py  tickets.py  transport.py
src/teamdynamix/tools/: __init__.py  csv_utils.py  sqlite_utils.py
tests/: test_people_endpoints.py  test_ticket_endpoints.py
